k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catena-web
  namespace: catena
  labels:
    app: catena-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catena-web
  template:
    metadata:
      labels:
        app: catena-web
    spec:
      imagePullSecrets:
      - name: headless-commerce-package-access-token
      containers:
      - name: catena-web
        image: ghcr.io/headless-commerce/catena_web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: catena-web
  namespace: catena
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: catena-web
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catena-web-web
  namespace: catena
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`catena.com.ng`)
    services:
    - name: catena-web
      port: 80
    middlewares:
    - name: security
      namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catena-web-web-tls
  namespace: catena
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`catena.com.ng`)
    services:
    - name: catena-web
      port: 80
    middlewares:
    - name: security
      namespace: default
  tls:
    certResolver: le
    domains:
    - main: "catena.com.ng"
      sans:
      - "*.catena.com.ng"
    options:
      name: mytlsoption
      namespace: default
